--- a/Datenbank-RPG/Datenbank-RPG/Datenbank-RPG.csproj
+++ b/Datenbank-RPG/Datenbank-RPG/Datenbank-RPG.csproj
@@ -8,4 +8,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ConsoleTables" Version="2.6.1" />
+    <PackageReference Include="RandomNameGenerator" Version="1.0.4" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
